--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lox",
+  "name": "tox",
   "version": "1.0.0",
-  "description": "Describe lox here",
+  "description": "Tox Programming language",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -10,8 +10,8 @@
     "umd"
   ],
   "scripts": {
-    "prebuild": "babel bin/ -d src/",
-    "watch:build": "babel bin/ -d src/ -w",
+    "prebuild": "babel bin/ -d src/ --presets=@babel/preset-env,@babel/preset-flow",
+    "watch:build": "babel bin/ -d src/ -w --presets=@babel/preset-env,@babel/preset-flow",
     "build": "nwb build-web-module",
     "clean": "nwb clean-module",
     "flow": "flow",
