--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@babel/preset-flow": "^7.9.0",
     "flow-bin": "^0.122.0",
-    "nwb": "0.25.x"
+    "nwb": "^0.25.2"
   },
   "author": "",
   "homepage": "",
